# dev-sandbox

./: .gitignore  CMakeLists.txt  CODE_WALKTHROUGH.md  readme.md
cmake/: DetectRuntime.cmake
examples/acl_memcpy_minimal/: README.md  SWEEP_README.md  h2d_d2h_async_memcpy  h2d_d2h_async_memcpy.cpp  run_io_multistream_compare.sh  run_multistream_scale_compare.sh  run_n_sweep.sh
examples/ffts_d2d_benchmark/: README.md  build.sh  ffts_plus_minimal_runtime.h  ffts_vs_acl_d2d_benchmark.cpp  run.sh  sweep.sh
module/copy/: CMakeLists.txt  copy_case.h  copy_code_structure.md  copy_main.cc  copy_result.h
module/copy/ascend/: copy_buffer_ascend.h  copy_case_ascend.cc  copy_case_ffts_d2d_ascend.cc  copy_instance_ascend.h  copy_instance_ffts_ascend.h  copy_instance_ffts_host_direct_ascend.h  copy_instance_ffts_pipeline_ascend.h  ffts_benchmark_validation_split_plan.md  ffts_code_walkthrough.md  ffts_d2d_dispatcher_ascend.h  ffts_d2d_dispatcher_test.cc  ffts_d2d_integration_plan.md  ffts_h2d_d2h_pipeline_plan.md  ffts_host_direct_code_walkthrough.md  ffts_host_direct_plan.md  ffts_lane_sweep_experiment_plan.md  run_h2d_ffts_experiments.py  run_h2d_ffts_validation.py
module/copy/ascend/docs/: ascend_h2d_ffts_yuanrong_pipeline_code_path.md  ffts_h2d_d2h_pipeline_plan.md  ffts_host_direct_plan.md  ffts_instance_code_path_beginner.md  yuanrong_pipeline_copycase_implementation_plan.md  yuanrong_pipeline_h2d_analysis.md
module/copy/ascend/scripts/: run_h2d_ffts_experiments.py  run_h2d_ffts_object_frags_sweep.py  run_h2d_ffts_validation.py
module/copy/cuda/gdr/: copy_case_gdr.cc
scripts/: build.sh  compare_all2all_ce_submit.sh  run_huge_shm_to_device_ce_affinity.sh  show_npu_numa_topology.sh  test_h2d.sh
